# PDE_solver

./: .gitignore  README.md
src/: CMakeLists.txt  README.md  heat_equation.cpp  utilities.h
src/Tests/: README.md  test_Dirichlet.cpp  test_neumann.cpp  utilities.cpp  utilities.h
src/solvers/: dirichlet_solver.cpp  dirichlet_solver.h  neumanndirichlet_solver.cpp  neumanndirichlet_solver.h  pde_solver.cpp  pde_solver.h
src/solvers/linear_solvers/: LU_solver_eigen.cpp  LU_solver_eigen.h  Linear_solver.cpp  Linear_solver.h  gauss_seidel_solver.cpp  gauss_seidel_solver.h  jacobi_solver.cpp  jacobi_solver.h
